<resources>
    <string name="app_name">TickDuck</string>
    <string name="settings">Settings</string>
    <string name="todayTodos">Today\'s todos</string>
    <string name="calendar">Calendar</string>
    <string name="add_todo">Add new Todo</string>
    <string name="title_hint">Title</string>
    <string name="category_hint">Category</string>
    <string name="date_hint">Date</string>
    <string name="description_hint">Description</string>
    <string name="create_todo">Create</string>
    <string name="create_new_category">Create new category</string>
    <string name="plus_category">Plus category</string>
    <string name="all_categories">All categories</string>
    <string name="category_name">Category name</string>
    <string name="splash_welcome">Welcome</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Previous_month">prev</string>
    <string name="Next_month">next</string>
    <string name="Sunday">sun</string>
    <string name="Monday">mon</string>
    <string name="Tuesday">tue</string>
    <string name="Wednesday">wed</string>
    <string name="Thursday">thur</string>
    <string name="Friday">fri</string>
    <string name="Saturday">sat</string>
    <string name="month">Month</string>
    <string name="today">Today</string>
    <string name="days">Weeks</string>
    <string name="sign_out">Sign out</string>
    <string name="change_profile_image">Change profile image</string>
    <string name="settings_frame">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="profile_image">Profile image</string>
    <string name="upload_from_gallery">Upload from gallery</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="clear">Clear</string>
    <string name="medium_priority">medium priority</string>
    <string name="low_priority">low priority</string>
    <string name="high_priority">high priority</string>
</resources>