<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="32dp"
    android:layout_marginTop="32dp"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <androidx.cardview.widget.CardView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:orientation="vertical"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp"
                android:layout_alignParentEnd="true">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="74dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/profile_image"
                    android:src="@drawable/ic_launcher_foreground" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:text="@string/settings_frame"
                android:textAlignment="gravity"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/calendar_cell_background"
            android:backgroundTint="@color/purple_200"
            android:backgroundTintMode="src_over"
            android:text="@string/change_profile_image" />

        <Button
            android:id="@+id/sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/calendar_cell_background"
            android:backgroundTint="@color/black"
            android:text="@string/sign_out" />

    </LinearLayout>
</FrameLayout>